Check for state

--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -407,7 +407,9 @@ function exam() {
   if (!!problemHeader && problemHeader.innerText.toLowerCase() === 'final exam') {
     console.log('[gym]: exam page');
 
-    state = 'load';
+    if (typeof state === 'undefined' || state === null) {
+      state = 'load';
+    }
 
     let problemId = document.getElementById('exam-problem').getAttribute('data-id');
 
