--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -276,7 +276,9 @@ function exam() {
 
     let previous_score;
 
-    var state;
+    let problemId = document.getElementById('exam-problem').getAttribute('data-id');
+
+    var state = 'load';
 
     const courseNum = parseInt(document.getElementById('__course_number__').innerText, 10);
 
@@ -407,12 +409,6 @@ function exam() {
       }
     }
 
-    if (typeof state === 'undefined' || state === null) {
-      state = 'load';
-    }
-
-    let problemId = document.getElementById('exam-problem').getAttribute('data-id');
-
     let observer = new MutationObserver(mutations => {
       mutations.forEach(function listMutations(mutation) {
         console.log('[gym] mutation type: ', mutation);
@@ -426,15 +422,7 @@ function exam() {
       progressStatusCheck = setInterval(checkStatus, 200);
     });
 
-    observer.observe(
-      document.getElementById(problemId + '-problem-progress'),
-      {
-        characterData: false,
-        attributes: false,
-        childList: true,
-        subtree: false
-      }
-    );
+    observer.observe(document.getElementById(problemId + '-problem-progress'), {childList: true});
 
     // scroll to show the results message
     document.getElementById('check-button').addEventListener('click', function() {
