--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -272,13 +272,13 @@ function exam() {
   if (!!problemHeader && problemHeader.innerText.toLowerCase() === 'final exam') {
     console.log('[gym]: exam page');
 
+    let observer;
+
     let progressStatusCheck; // this is the interval we'll set to track status on this problem
 
     let previous_score;
 
     let problemId = document.getElementById('exam-problem').getAttribute('data-id');
-
-    var state = 'load';
 
     const courseNum = parseInt(document.getElementById('__course_number__').innerText, 10);
 
@@ -329,7 +329,7 @@ function exam() {
       };
     };
 
-    function showProblemProgress() {
+    function showProblemProgress(state) {
       let {
         attempts_used,
         attempts_total,
@@ -395,9 +395,16 @@ function exam() {
           $(".failed_modal").removeClass('hidden');
         }
       }
+
+      if (state === 'load') {
+        console.log('load state, disconnecting observer');
+        observer.disconnect();
+      } else if (state === 'submit') {
+        console.log('submit state, observer remains active');
+      }
     }
 
-    function checkStatus(){
+    function checkStatus(state){
       const {
         attempts_used,
         correct,
@@ -405,36 +412,37 @@ function exam() {
 
       if (attempts_used > 0 || correct > 0) {
         clearInterval(progressStatusCheck);
-        showProblemProgress();
+        showProblemProgress(state);
       }
     }
 
-    let observer = new MutationObserver(mutations => {
-      mutations.forEach(function listMutations(mutation) {
-        console.log('[gym] mutation type: ', mutation);
+    function observatory(state) {
+      observer = new MutationObserver(mutations => {
+        mutations.forEach(function listMutations(mutation) {
+          console.log('[gym] mutation type: ', mutation);
+        });
+
+        // reset interval if we detect a grade change
+        if (typeof progressStatusCheck !== 'undefined'){
+          clearInterval(progressStatusCheck);
+        }
+        // set interval on initial page load
+        progressStatusCheck = setInterval(checkStatus(state), 200);
       });
 
-      // reset interval if we detect a grade change
-      if (typeof progressStatusCheck !== 'undefined'){
-        clearInterval(progressStatusCheck);
-      }
-      // set interval on initial page load
-      progressStatusCheck = setInterval(checkStatus, 200);
-    });
-
-    observer.observe(document.getElementById(problemId + '-problem-progress'), {childList: true});
+      observer.observe(document.getElementById(problemId + '-problem-progress'), {childList: true});
+    }
 
     // scroll to show the results message
     document.getElementById('check-button').addEventListener('click', function() {
       console.log('[gym] check exam button clicked');
 
-      state = 'submit';
+      observatory('submit');
 
       document.getElementById('course_passed_message').scrollIntoView();
     }, false);
-    // $('#check-button').on('click', function submitButton() {
-      
-    // });
+
+    observatory('load');
   } else {
     console.log('[gym]: not exam page');
     return;
