Forgot to declare the function(!)

--- a/partials/final-exam-js.html
+++ b/partials/final-exam-js.html
@@ -3,7 +3,7 @@ layout: raw
 permalink: /partials/final-exam-js/
 ---
 <script>
-exam() {
+function exam() {
   // This determines if we are on the exam page? Yes. Final Exam vs Quiz pages.
   const problemHeader = document.querySelector('.problem-header');
   const examProblem = document.getElementById('exam-problem');
