--- a/partials/final-exam-js.html
+++ b/partials/final-exam-js.html
@@ -3,19 +3,57 @@ layout: raw
 permalink: /partials/final-exam-js/
 ---
 <script>
+// MIT Licensed
+// Author: jwilson8767
+
+/**
+ * Waits for an element satisfying selector to exist, then resolves promise with the element.
+ * Useful for resolving race conditions.
+ *
+ * @param selector
+ * @returns {Promise}
+ */
+function elementReady(selector) {
+  return new Promise((resolve, reject) => {
+    let el = document.querySelector(selector);
+    if (el) {
+      resolve(el); 
+      return
+    }
+    new MutationObserver((mutationRecords, observer) => {
+      // Query for elements matching the specified selector
+      Array.from(document.querySelectorAll(selector)).forEach((element) => {
+        resolve(element);
+        //Once we have resolved we don't need the observer anymore.
+        observer.disconnect();
+      });
+    })
+      .observe(document.documentElement, {
+        childList: true,
+        subtree: true
+      });
+  });
+}
+
+// Define variables for exam related stuff
+const examProblem = document.getElementById('exam-problem');
+let gradeObserver;
+let progressStatusCheck; // this is the interval we'll set to track status on this problem
+
+if (elementReady(examProblem)) {
+  console.log('[gym]: exam page');
+} else {
+  console.log('[gym]: not exam page');
+}
+
 function exam() {
   // This determines if we are on the exam page? Yes. Final Exam vs Quiz pages.
   const problemHeader = document.querySelector('.problem-header');
-  const examProblem = document.getElementById('exam-problem');
 
   if (!!examProblem && problemHeader.innerText.toLowerCase() === 'final exam') {
-    console.log('[gym]: exam page');
 
-    let observer;
 
-    let progressStatusCheck; // this is the interval we'll set to track status on this problem
-
-    let problemId = document.getElementById('exam-problem').getAttribute('data-id');
+    let problemId = examProblem.getAttribute('data-id') + '-problem-progress';
 
     const courseNum = parseInt(document.getElementById('__course_number__').innerText, 10);
 
@@ -128,7 +166,7 @@ function exam() {
 
       if (state === 'load') {
         console.log('load state, disconnecting observer');
-        observer.disconnect();
+        gradeObserver.disconnect();
       } else if (state === 'submit') {
         console.log('submit state, observer remains active');
       }
@@ -146,38 +184,41 @@ function exam() {
       }
     }
 
-    function observatory(state) {
-      observer = new MutationObserver((mutations, state) => {
-        mutations.forEach(function listMutations(mutation) {
-          console.log('[gym] mutation type: ', mutation);
-        });
 
-        // reset interval if we detect a grade change
-        if (typeof progressStatusCheck !== 'undefined'){
-          clearInterval(progressStatusCheck);
-        }
-        // set interval on initial page load
-        progressStatusCheck = setInterval(checkStatus(state), 200);
-      });
-
-      observer.observe(document.getElementById(problemId + '-problem-progress'), {childList: true});
-    }
 
     // scroll to show the results message
     document.getElementById('check-button').addEventListener('click', function() {
       console.log('[gym] check exam button clicked');
 
-      observatory('submit');
+      observatory('submit', problemId);
 
       document.getElementById('course_passed_message').scrollIntoView();
     }, false);
 
-    observatory('load');
+    observatory('load', problemId);
   } else {
     console.log('[gym]: not exam page');
     return;
   }
 }
+
+function observatory(state, id) {
+  gradeObserver = new MutationObserver((mutations, state) => {
+    mutations.forEach(function listMutations(mutation) {
+      console.log('[gym] mutation type: ', mutation);
+    });
+
+    // reset interval if we detect a grade change
+    if (typeof progressStatusCheck !== 'undefined'){
+      clearInterval(progressStatusCheck);
+    }
+    // set interval on initial page load
+    progressStatusCheck = setInterval(checkStatus(state), 200);
+  });
+
+  gradeObserver.observe(document.getElementById(id), {childList: true});
+}
+
 
 // Initialize exam function (do not wrap this in a document ready or anything similar, otherwise the mutation observer will not work properly)
 exam();
