--- a/css/main.scss
+++ b/css/main.scss
@@ -965,7 +965,7 @@ h2 {
 
 code,
 code * {
-  font-family: monospace, serif;
+  font-family: monospace, monospace;
 }
 
 /* password reset page */
@@ -2499,4 +2499,32 @@ aside.system-status {
 
 .gymnasium-home aside.system-status {
   display: none;
+}
+
+// https://github.com/gymnasium/tracker/issues/242
+// default white-space: nowrap;
+
+#exam-problem {
+
+  pre {
+    font-size: 16px;
+    line-height: 1.15;
+    padding: 1.2rem;
+    border: 1px solid #ccc;
+    overflow-x: auto;
+    margin: 1.2rem 0;
+  }
+
+  code {
+    display: inline-block;
+    font: 0.925em/1.35 monospace, monospace;
+    white-space: pre-wrap;
+  }
+
+  pre code {
+    display: block;
+    white-space: pre;
+    margin: -1rem 0;
+  }
+
 }
