Update courseware exam code styling
- Remove pre border, test style
- Update pre padding and margin

--- a/css/main.scss
+++ b/css/main.scss
@@ -2509,10 +2509,9 @@ aside.system-status {
   pre {
     font-size: 16px;
     line-height: 1.15;
-    padding: 1.2rem;
-    border: 1px solid #ccc;
+    padding: 1rem 2rem;
     overflow-x: auto;
-    margin: 1.2rem 0;
+    margin: 2.2rem 0 1rem;
   }
 
   code {
