--- a/partials/final-exam-js.html
+++ b/partials/final-exam-js.html
@@ -37,16 +37,16 @@ function elementReady(selector) {
 
 // Define variables for exam related stuff
 const examProblem = document.getElementById('exam-problem');
+const problemHeader = document.querySelector('.problem-header');
 let gradeObserver;
 let progressStatusCheck; // this is the interval we'll set to track status on this problem
 
 function exam() {
 
-  if (elementReady(examProblem)) {
+  if (elementReady(problemHeader)) {
     console.log('[gym]: quiz or exam page');
     // This determines if we are on the exam page? Yes. Final Exam vs Quiz pages.
-    const problemHeader = document.querySelector('.problem-header');
-
+    
     if (problemHeader.innerText.toLowerCase() === 'final exam') {
       console.log('[gym]: final exam page');
 
