--- a/css/main.scss
+++ b/css/main.scss
@@ -2502,7 +2502,7 @@ aside.system-status {
 }
 
 // https://github.com/gymnasium/tracker/issues/242
-// default white-space: nowrap;
+// Override default white-space: nowrap;
 
 #exam-problem {
 
@@ -2510,19 +2510,23 @@ aside.system-status {
     font-size: 16px;
     line-height: 1.15;
     padding: 1rem 2rem;
-    overflow-x: auto;
     margin: 2.2rem 0 1rem;
   }
 
   code {
     display: inline-block;
-    font: 0.925em/1.35 monospace, monospace;
+    font-size: 92.5%;
+    font-family: monospace, monospace;
+    overflow-wrap: break-word;
     white-space: pre-wrap;
+    padding: 0.5ex 1ex;
+    margin: 0;
   }
 
   pre code {
     display: block;
     white-space: pre;
+    padding: 0;
     margin: -1rem 0;
   }
 
