--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -297,7 +297,7 @@ function exam() {
     }
 
     function observatory(state) {
-      gradeObserver = new MutationObserver((mutations, state) => {
+      gradeObserver = new MutationObserver((mutations) => {
         mutations.forEach(function listMutations(mutation) {
           console.log('[gym] mutation type: ', mutation);
         });
