--- a/css/main.scss
+++ b/css/main.scss
@@ -2506,11 +2506,16 @@ aside.system-status {
 
 #exam-problem {
 
+  pre,
+  code {
+    tab-size: 2;
+  }
+
   pre {
     font-size: 16px;
     line-height: 1.15;
-    padding: 1rem 2rem;
-    margin: 2.2rem 0 1rem;
+    padding: 0;
+    margin: 1.2rem 0;
   }
 
   code {
@@ -2519,15 +2524,15 @@ aside.system-status {
     font-family: monospace, monospace;
     overflow-wrap: break-word;
     white-space: pre-wrap;
-    padding: 0.5ex 1ex;
+    padding: 0.125rem 0.5rem;
     margin: 0;
   }
 
   pre code {
     display: block;
+    line-height: inherit;
     white-space: pre;
-    padding: 0;
-    margin: -1rem 0;
+    padding: 0 1.125rem;
   }
 
 }
