Update Content Collections hero and landing page
- Update hero text, list out all topics (match order in footer)
- Update landing page CTA text, Explore to Learn More

--- a/_includes/heros/hero-collections.html
+++ b/_includes/heros/hero-collections.html
@@ -5,7 +5,7 @@
       <header>
         <p class="subhead all-caps"><strong>New</strong></p>
         <h1>Content Collections</h1>
-        <p class="description">Explore specific topics with free curated content on everything from design and development to accessibility and remote work.</p>
+        <p class="description">Explore specific topics with free curated content on design systems, web development, UX design, prototyping, accessibility, and remote work.</p>
       </header>
       <div class="cta">
         <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/collections"><b>Explore Collections</b></a>
