--- a/_includes/sidebar-featured.html
+++ b/_includes/sidebar-featured.html
@@ -1,5 +1,10 @@
 <link rel="stylesheet" href="{{ site.url }}/css/static-sidebar-content.css?{{ site.time | date:'%s' }}">
 
+<!-- Temporary HTML for style hooks -->
+<div class="find-courses">
+<div class="sidebar sidebar-static">
+<!-- / Temporary HTML for style hooks -->
+
 <h1>Featured Content</h1>
 
 <section>
@@ -56,3 +61,8 @@
   </p>
 </section>
 -->
+
+<!-- Temporary HTML for style hooks -->
+</div>
+</div>
+<!-- / Temporary HTML for style hooks -->
