--- a/_layouts/wrapper-75-25.html
+++ b/_layouts/wrapper-75-25.html
@@ -15,7 +15,7 @@
 
           <div class="col-md-3">
             {%- comment -%} Get Upcoming/Featured Courses Sidebar {%- endcomment -%}
-            {%- include featured.html -%}
+            {%- include sidebar-featured.html -%}
           </div><!-- .col-md-3 -->
         </div><!-- .row -->
       </div><!-- .white-panel -->
